# appstore-reviews-analyzer

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
scripts/: entrypoint.sh
src/api/: main.py  schemas.py
src/api/routers/: __init__.py  reviews.py
src/config/: settings.py
src/db/: session.py
src/db/alembic/: env.py
src/db/alembic/versions/: 3859b22b6d3e_initial_migration.py
src/db/models/: __init__.py  app.py  app_insight.py  base.py  processed_review.py  review.py
src/interfaces/: app_reviews.py
src/jobs/: base.py  review_analysis.py
src/prompts/: insights.py  keywords.py
src/schemas/: app_reviews.py  nlp.py
src/scrappers/: app_reviews.py  base.py
src/services/: app_reviews.py  nlp.py
src/tests/: conftest.py
src/tests/integration/: test_api.py
src/tests/unit/: test_schemas.py  test_scrappers.py  test_services.py
